<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_background"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- Text La meva puntuació -->
        <TextView
            android:id="@+id/miPuntuaciotxt"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/miPuntuaciotxt"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
        <!-- contingut puntuació -->
        <TextView
            android:id="@+id/puntuacio"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/puntuacio"
            android:textColor="#FFFFFF" />
        <!-- Imatge perfil -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imatgePerfil"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:src="@drawable/user" />
        <!-- uid -->
        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uid"
            android:textColor="#FFFFFF" />
        <!-- correu -->
        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/correo"
            android:textColor="#FFFFFF"/>
        <!-- edat -->
        <TextView
            android:id="@+id/edat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edat"
            android:textSize="15sp"
            android:textColor="#FFFFFF"/>
        <!-- Població -->
        <TextView
            android:id="@+id/poblacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/poblacio"
            android:textSize="15sp"
            android:textColor="#FFFFFF"/>
        <!-- nom -->
        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nom"
            android:textColor="#FFFFFF"/>
        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="@string/jugarBtn"
            android:textSize="18sp"
            android:textColor="#570094"/>

        <Button
            android:id="@+id/editarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="Editar"
            android:textSize="18sp"
            android:textColor="#570094"/>
        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="@string/PuntuacionsBtn"
            android:textSize="18sp"
            android:textColor="#570094"/>
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="@string/CreditsBtn"
            android:textSize="18sp"
            android:textColor="#570094"/>
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/canviarContrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="@string/canviarContrasenya"
            android:textSize="18sp"
            android:textColor="#570094"/>
        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botopropi"
            android:text="@string/tancarSessio"
            android:textSize="18sp"
            android:textColor="#570094"/>

    </LinearLayout>
</ScrollView>