<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#54E6D5"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correoEt"
            android:inputType="textEmailAddress" />
        <!-- forcem que la entrada sigui un correu electronic -->

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passEt"
            android:inputType="textPassword" />
        <!-- forcem que la entrada sigui un password -->


        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/nombreEt" />

        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textSize="20sp" />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Registrar" />
    </LinearLayout>
</RelativeLayout>
